<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">calcapp</string>
   <string name="item1">Preferences</string>
   <string name="item2">Language DE</string>
   <string name="item3">Help</string>
   <string name="item4">About</string>
   <string name="equal_sign">=</string>
   <string name="ce">CE</string>
   <string name="minus_sign">-</string>
   <string name="plus_sign">+</string>
   <string name="multiply_sign">*</string>
   <string name="division_sign">/</string>
   <string name="zero">0</string>
   <string name="seven">7</string>
   <string name="nine">9</string>
   <string name="four">4</string>
   <string name="five">5</string>
   <string name="six">6</string>
   <string name="one">1</string>
   <string name="two">2</string>
   <string name="three">3</string>
   <string name="eight">8</string>
</resources>
