<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#888"
    >

   <LinearLayout android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:padding="8dp"
       >

      <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/display"
                android:text="@string/zero"
                android:textSize="60sp"
                android:gravity="center_vertical"
                android:background="#000"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="1"
                android:textColor="#2f0"
          />
   </LinearLayout>


    <Space android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="2"
           android:id="@+id/spacer1"
            />


    <TableLayout android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="11"
                 android:padding="6dp"
                 android:background="#666"

       >

      <TableRow android:layout_weight="1"
                android:layout_height="0dp"
          >
          <Button style="@style/number_button"
                  android:text="@string/seven"
                 android:id="@+id/btn7"
             />

          <Button style="@style/number_button"
                  android:text="@string/eight"
                 android:id="@+id/btn8"
             />

          <Button style="@style/number_button"
                  android:text="@string/nine"
                 android:id="@+id/btn9"
             />

          <Button style="@style/operator_button"
                  android:text="@string/division_sign"
                 android:id="@+id/btn_div"
             />

      </TableRow>
      <TableRow android:layout_weight="1"
                android:layout_height="0dp"
          >
          <Button style="@style/number_button"
                  android:text="@string/four"
                 android:id="@+id/btn4"
                />

          <Button style="@style/number_button"
                  android:text="@string/five"
                 android:id="@+id/btn5"
             />
          <Button style="@style/number_button"
                  android:text="@string/six"
                 android:id="@+id/btn6"
             />
          <Button style="@style/operator_button"
                  android:text="@string/multiply_sign"
                 android:id="@+id/btn_mul"
             />
      </TableRow>

      <TableRow android:layout_weight="1"
                android:layout_height="0dp"
          >
          <Button style="@style/number_button"
                  android:text="@string/one"
                 android:id="@+id/btn1"
             />
          <Button style="@style/number_button"
                  android:text="@string/two"
                 android:id="@+id/btn2"
             />
          <Button style="@style/number_button"
                  android:text="@string/three"
                 android:id="@+id/btn3"
             />
          <Button style="@style/operator_button"
                  android:text="@string/minus_sign"
                 android:id="@+id/btn_minus"
             />
      </TableRow>

      <TableRow android:layout_weight="1"
                android:layout_height="0dp"
          >

          <Button style="@style/number_button"
                  android:text="@string/zero"
                 android:id="@+id/btn0"
             />

          <Button style="@style/equals_button"
                  android:text="@string/equal_sign"
                 android:id="@+id/btn_dot"
             />

          <Button style="@style/ce_button"
                  android:text="@string/ce"
                 android:id="@+id/btn_clear"
             />

          <Button style="@style/operator_button"
                  android:text="@string/plus_sign"
                 android:id="@+id/btn_plus"
             />

      </TableRow>

   </TableLayout>

</LinearLayout>


